# charge

./: CMakeLists.txt  Charge.pro  Charge.sln  README.md  README.txt  circularfield.cpp  dynamicobstacle.cpp  dynamicobstacle.h  field.h  main.cpp  staticobstacle.cpp  test.charge
data/shaders/fragment/: ambient.glsl  default.glsl  light.glsl  player.glsl
data/shaders/vertex/: ambient.glsl  light.glsl  player.glsl
data_src/: player.psd
src/: actor.cpp  actor.h  chargeloader.cpp  chargeloader.h  circularfield.cpp  circularfield.h  dynamicobstacle.cpp  dynamicobstacle.h  field.cpp  field.h  glew.cpp  glut_wrap.h.in  light.cpp  light.h  loader.cpp  loader.h  main.cpp  maincanvas.cpp  maincanvas.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  objectloader.cpp  objectloader.h  player.cpp  player.h  settingsdialog.cpp  settingsdialog.h  staticobstacle.cpp  staticobstacle.h
